--- a/Group1_Project1.Rmd
+++ b/Group1_Project1.Rmd
@@ -102,14 +102,14 @@ AAS1V2l <- auto.arima(S1V2, max.order = 8L, ic = 'aicc', stepwise = FALSE,
                       approximation = FALSE, seasonal = FALSE, parallel = TRUE,
                       lambda = 'auto', biasadj = TRUE)
 ETSS1V1 <- ets(S1V1, model = 'ZZZ', ic = 'aicc')
+ETSS1V1l <- ets(S1V1, model = 'ZZZ', ic = 'aicc', lambda = 'auto', biasadj = TRUE)
 ETSS1V2 <- ets(S1V2, model = 'ZZZ', ic = 'aicc')
-ETSS1V2l <- ets(S1V2, model = 'ZZZ', ic = 'aicc', lambda = 'auto',
-                biasadj = TRUE)
+ETSS1V2l <- ets(S1V2, model = 'ZZZ', ic = 'aicc', lambda = 'auto', biasadj = TRUE)
 ```
 
 ### Model Selection
 Exponentially smoothed and ARIMA models were reviewed, with details in the
-appendix. The selected model for V1 is an `r arimaDisplay(AAS1V1)` with drift
+appendix. The selected model for V1 is an `r arimaDisplay(AAS1V1l)` with drift
 and for V2 it is an `r arimaDisplay(AAS1V2l)` with a Box-Cox \(\lambda\) of
 `r AAS1V2l$lambda[[1]]`
 
@@ -117,11 +117,11 @@ and for V2 it is an `r arimaDisplay(AAS1V2l)` with a Box-Cox \(\lambda\) of
 The mean forecast values will be supplied in the attached Excel workbook. The
 mean forecasts with error bands are plotted below
 ```{r S1forecastplots, echo=FALSE}
-autoplot(forecast(AAS1V1, h = 140)) + ylab("V1")
+autoplot(forecast(AAS1V1l, h = 140)) + ylab("V1")
 autoplot(forecast(AAS1V2l, h = 140)) + ylab("V2")
 ```
 ```{r S1Final, include=FALSE}
-S1Final <- data.table(Var01 = forecast(AAS1V1, h = 140)$mean,
+S1Final <- data.table(Var01 = forecast(AAS1V1l, h = 140)$mean,
                  Var02 = forecast(AAS1V2l, h = 140)$mean)
 ```
 
@@ -650,22 +650,53 @@ and are particularly Gaussian in nature.
 checkresiduals(AAS1V1)
 ```
 
-#### Exponential Smoothing State Space
-An exponential smoothing state-space model was fit to the data as well and
-returned a `r ETSS1V1$method` model. The accuracy of the models are compared
-below, first the ARIMA model and then the ETS model.
-```{r S1V1wAcc}
-accuracy(AAS1V1)
-accuracy(ETSS1V1)
+#### Box-Cox Adjusted Model
+The model was fit with the same exhaustive procedure using a Box-Cox adjustment
+with \(\lambda=\)`r AAS1V1l$lambda[[1]]`. The best-fitting model was a much more
+parsimonious `r arimaDisplay(AAS1V1l)`. This exhibited completely safe roots and
+excellent residuals. 
+
+```{r S1V1BC, echo=FALSE}
+ggtsdisplay(diff(BoxCox(S1V1, AAS1V1l$lambda[[1]])))
+autoplot(AAS1V1l)
+checkresiduals(AAS1V1l)
 ```
 
-More importantly, since they are fit on the exact same data, their AICc may
-be compared. For the ARIMA model it is `r AAS1V1$aicc` and for the ETS model, it
-is `r ETSS1V1$aicc`. The choice is clear, that the ARIMA model is superior.
+#### Exponential Smoothing State Space
+An exponential smoothing state-space model was fit to the data as well and
+returned a `r ETSS1V1$method` model without Box-Cox and a `r ETSS1V1l$method`
+with \(\lambda=\)`r ETSS1V1l$lambda[[1]]`.
 
-#### Selection
-The `r arimaDisplay(AAS1V1)` model will be used to forecast Variable 01 for
-Series 01.
+#### Model Comparison and Selection
+The accuracy of the models are compared below.
+
+```{r S1V1Acc, echo=FALSE}
+accS1V1 <- rbind(data.frame(accuracy(AAS1V1)),
+                 data.frame(accuracy(AAS1V1l)),
+                 data.frame(accuracy(ETSS1V1)),
+                 data.frame(accuracy(ETSS1V1l)))
+row.names(accS1V1) <- c('ARIMA', 'ARIMA+BC', 'ETS', 'ETS+BC')
+knitr::kable(accS1V1, digits = 3L, format = 'pandoc')
+```
+
+The AICc may be compared within untransformed and Box-Cox transformed models,
+but not between them.
+
+```{r S1V1AICc, echo=FALSE}
+aiccUTS1V1 <- data.frame(Models = c('ARIMA', 'ETS'),
+                         AICc = c(AAS1V1$aicc, ETSS1V1$aicc))
+aiccBCS1V1 <- data.frame(Models = c('ARIMA+BC', 'ETS+BC'),
+                         AICc = c(AAS1V1l$aicc, ETSS1V1l$aicc))
+knitr::kable(aiccUTS1V1, digits = 3L, format = 'pandoc')
+knitr::kable(aiccBCS1V1, digits = 3L, format = 'pandoc')
+```
+
+It is clear that the ARIMA models outperform their state space equivalents for
+almost all statistics. Choosing between the ARIMA and ARIMA+BC models is hard,
+as most statistics, including the MAPE, are almost exactly the same. However,
+there is value in parsimony, so the the `r arimaDisplay(AAS1V1l)` model with
+\(\lambda=\)`r AAS1V1l$lambda[[1]]` will be used to forecast Series 01 Variable
+01, with the bias adjustment to recover the mean and not the median.
 
 ### Variable 02
 #### Missing Data
@@ -689,8 +720,8 @@ plot(S1V2)
 lines(S1V2c, col = 'green4')
 ```
 
-Consideration was given throughout the process to replacing outliers, but
-doing so did not result in any significant improvement.
+Consideration was given throughout the process to replacing outliers, but doing
+so did not result in any significant improvement.
 
 #### Stationarity
 It is clear that there is non-stationarity in V2 when looking at autocorrelation
@@ -748,32 +779,25 @@ the ARIMA and replacing the outliers discussed above. However, any model which
 showed a meaningful improvement in its roots demonstrated a significant
 reduction in goodness of fit.
 
-#### Applying Box-Cox
-At this point, despite the initial reluctance to transform the raw data, it
-became prudent to investigate a Box-Cox transform. Similar to the cases above,
-the important findings and graphics are reprised below.
+#### Box-Cox Adjusted Model
+The model was fit with the same exhaustive procedure using a Box-Cox adjustment
+with \(\lambda=\)`r AAS1V2l$lambda[[1]]`. The best-fitting model was a similar
+`r arimaDisplay(AAS1V2l)`. This exhibited slightly safer roots and much better
+residuals. 
 
-The best model under order 20 for V2 transformed via Box-Cox (\(\lambda = \)
-`r AAS1V2l$lambda[[1]]`) is once again an `r arimaDisplay(AAS1V2l)`. It too
-cannot be directly compared to the earlier two models, as it is based on
-different data. Its characteristic roots are not much better than the original.
-
-```{r S1V2l_unitC2, echo=FALSE}
+```{r S1V2BC, echo=FALSE}
+ggtsdisplay(diff(BoxCox(S1V2, AAS1V2l$lambda[[1]])))
 autoplot(AAS1V2l)
-```
-
-However, its residuals show clear improvement.
-```{r S1V2lresid, echo=FALSE, fig.width=10L, fig.height=8L}
 checkresiduals(AAS1V2l)
 ```
 
 #### Exponential Smoothing State Space
-An ETS model with and without Box-Cox was also fit. These returned an
-`r ETSS1V2$method` and `r ETSS1V2l$method` respectively.
+An exponential smoothing state-space model was fit to the data as well and
+returned a `r ETSS1V2$method` model without Box-Cox and a `r ETSS1V2l$method`
+with \(\lambda=\)`r ETSS1V1l$lambda[[1]]`.
 
 #### Model Comparison and Selection
 The accuracy of the models are compared below.
-
 
 ```{r S1V2Acc, echo=FALSE}
 accS1V2 <- rbind(data.frame(accuracy(AAS1V2)),
@@ -787,7 +811,7 @@ knitr::kable(accS1V2, digits = 3L, format = 'pandoc')
 The AICc may be compared within untransformed and Box-Cox transformed models,
 but not between them.
 
-```{r S1V2AICc, echo=FALSE}
+```{r S1V1AICc, echo=FALSE}
 aiccUTS1V2 <- data.frame(Models = c('ARIMA', 'ETS'),
                          AICc = c(AAS1V2$aicc, ETSS1V2$aicc))
 aiccBCS1V2 <- data.frame(Models = c('ARIMA+BC', 'ETS+BC'),
@@ -796,13 +820,12 @@ knitr::kable(aiccUTS1V2, digits = 3L, format = 'pandoc')
 knitr::kable(aiccBCS1V2, digits = 3L, format = 'pandoc')
 ```
 
-In both cases, the ARIMA variants outperform their exponentially smoothed
-counterparts. Moreover, in comparable metrics (e.g. RMSE), the Box-Cox
-transformation shows better results (and better residuals).
-
-#### Selection
-The `r arimaDisplay(AAS1V2l)` with \(\lambda=\)`r AAS1V2l$lambda[[1]]` model
-will be used to forecast Variable 02 of Series 01.
+As usual, the ARIMA models outperform their state space equivalents for almost
+all statistics. Choosing between the ARIMA and ARIMA+BC models is easier here,
+as most statistics demonstrate the superiority of the Box-Cox transform.
+Therefore, the the `r arimaDisplay(AAS1V2l)` model with
+\(\lambda=\)`r AAS1V2l$lambda[[1]]` will be used to forecast Series 01 Variable
+02, with the bias adjustment to recover the mean and not the median.
 
 ## Series 3
 ### Missing Value Imputation
@@ -1306,7 +1329,7 @@ The residuals look good, though.
 checkresiduals(AAS5V3)
 ```
 
-#### Applying Box-Cox
+#### Box-Cox Adjusted Model
 The model was fit with the same exhaustive procedure using a Box-Cox adjustment
 with \(\lambda=\)`r S5V3lam`. Interestingly, the best-fitting model is a less
 parsimonious `r arimaDisplay(AAS5V3l)`. The added MA root is well within the
