--- a/Group1_Project1.Rmd
+++ b/Group1_Project1.Rmd
@@ -1,12 +1,16 @@
 ---
 title: "CUNY DT 624"
-subtitle: Project 1
 author: 'Group 1: Avraham Adler, Vishal Arora, Samuel Bellows, Austin Chan'
 date: "Summer 2020"
 output:
   word_document:
     toc: yes
     toc_depth: 4
+  html_document:
+    df_print: paged
+    toc: yes
+    toc_depth: '4'
+subtitle: Project 1
 ---
 
 ```{r setup, include=FALSE}
@@ -18,6 +22,10 @@ library(urca)
 library(ggplot2)
 library(scales)
 library(data.table)
+library(dplyr)
+library(imputeTS)
+library(MLmetrics)
+
 
 # Read in Data
 DT <- read_xls('./project1data/Data Set for class.xls')
@@ -125,11 +133,250 @@ S1Final <- data.table(Var01 = forecast(AAS1V1l, h = 140)$mean,
                  Var02 = forecast(AAS1V2l, h = 140)$mean)
 ```
 
-## Series 2
+## Series 2            
+
+### Statistical & Exploratory Analysis of series S02            
+```{r S2extrVar, echo=FALSE}
+
+
+S2 <- ts(S02[-futureobs, 4:5])
+
+S2v1 <- ts(S2[-futureobs,1])
+S2v2 <- ts(S2[-futureobs,2])
+
+
+summary(S2v1)
+
+summary(S2v2)
+
+```
+
+Var02 has no missing values and Var03 has 4 missing values.        
+
+#### Exploratory Analysis of Var02 in series S02
+
+```{r S2ExpAnlV2, echo=FALSE}
+
+autoplot(S2v1)
+
+lag.plot(S2v1)
+
+hist(scale(S2v1),br=100,xlim=c(0,100))
+
+boxplot(S2v1)
+
+qqnorm(S2v1)
+
+qqline(S2v1)
+
+```
+
+Looking at above plots and comparing with the below assumptions for univariate variable.                                  
+
+Fixed Location: If the fixed location assumption holds, then the run sequence plot will be flat and non-drifting.                             
+Fixed Variation: If the fixed variation assumption holds, then the vertical spread in the run sequence plot will be the approximately the same over the entire horizontal axis.                        
+Randomness: If the randomness assumption holds, then the lag plot will be structureless and random.                 
+Fixed Distribution: If the fixed distribution assumption holds, in particular if the fixed normal distribution holds, then the histogram will be bell-shaped, and the normal probability plot will be linear.                              
+
+In Var02 case, the run sequence plot shows the order that the data are presented in 
+the file is NOT random and also the variance in the data is eventually not much towards
+the end i.e. it is flat and drift is nearly constant. Lag plot has some structure,
+i.e., mostly a  big clusters is  visible which means it is not random. Histogram shows the
+presence of outliers. The histogram is not symmetrical, nor does it  looks like a 
+bell-curve and it is right skewed. The normal QQ plot is not a straight line.
+
+#### Exploratory Analysis of Var03 in series S02
+```{r S2ExpAnlV3, echo=FALSE}
+
+# interpreting NA values in our variable,
+S2v2 <- na_interpolation(S2v2)  
+
+summary(S2v2)
+
+autoplot(S2v2)
+
+lag.plot(S2v2)
+
+hist(scale(S2v2),br=100,xlim=c(0,100) )
+
+boxplot(S2v2)
+
+qqnorm(S2v2)
+
+qqline(S2v2)
+
+
+```
+In Var03 case, histogram shows the data is right skewed, and lag diagram shows a 
+big cluster of variables , which means data is randomly distributed.And we can clearly 
+see that there is only one outlier from our box plot.so we are not going to do anything
+for the outlier as without knowing the background of the data outlier we don't want to 
+tinker with that.              
+
+#### Outlier replacement for var02
+```{r S2outliRep02, echo=FALSE, fig.width=8L, fig.height=6L}
+
+# Replacing outlier using linear interpolation on a time series
+
+S02v2C <- tsclean(S2v1)
+S02v3C <- S2v2
+
+
+
+autoplot(S02v2C)
+
+hist(scale(S02v2C),br=100,xlim=c(0,100) )
+```
+
+Aplying tsclean to replace outlier in the var02 using linear interpolation, it is clear
+visible that our run sequence diagram shows a inverse trend and not much of seasonality 
+and it has certain constant drift . Histogram is now not rughtly skewed and is now more 
+following bell shaped curve. As var03 has only one outlier , so we will give it a skip as
+there is not enough data information as to whether this outlier is due to wrong data 
+collection is it due to sudden cyclic trend which occured at that time period.             
+
+#### ACF of Var02 and Var03
+```{r S2ACFPlots, echo=FALSE, fig.width=8L, fig.height=6L}
+
+ggAcf(S02v2C)
+
+ggAcf(S02v3C)
+
+
+```
+
+ACF plots for both var02 & var03 shows that Trend is present with very less or no seasonality.
+And also looking at the plots we can say that the correlation is very weak which means there
+is very less time dependency in data for both variables.              
+
+### Applying Models 
+
+#### Using Holt's method for Var02.                   
+```{r S2v2HoltModel, echo=FALSE, fig.width=8L, fig.height=6L}
+fc2 <- holt(S02v2C, damped=TRUE, h=140)
+
+autoplot(S02v2C) +
+  autolayer(fc2, series="Damped Holt's method V02", PI=FALSE) +
+  ggtitle("Forecasts from Holt's method") + xlab("Year") +
+  ylab("Holt's Damped Method Var02") +
+  guides(colour=guide_legend(title="Forecast"))
+checkresiduals(fc2)
+autoplot(forecast(fc2))
+
+```
+
+#### Applying Holt's method for Var03.                         
+
+```{r S2v3HoltModel, echo=FALSE, fig.width=8L, fig.height=6L}
+# VAr03
+fc3 <- holt(S02v3C, damped=TRUE, h=140)
+autoplot(S02v3C) +
+  autolayer(fc3, series="Damped Holt's method V03", PI=FALSE) +
+  ggtitle("Forecasts from Holt's method") + xlab("Year") +
+  ylab("Holt's Damped Method Var03") +
+  guides(colour=guide_legend(title="Forecast"))
+checkresiduals(fc3)
+autoplot(forecast(fc3))
+
+```
+
+#### Applying ETS model to Var02
+```{r S2v2ETSModel, echo=FALSE, fig.width=8L, fig.height=6L}
+#Var 02
+fit_ets <- ets(S02v2C)
+autoplot(fit_ets)
+checkresiduals(fit_ets)
+fit_ets %>% forecast(h=140) %>%
+  autoplot() +
+  ylab("Forecast for Var02")
+
+```
+
+#### Applying ETS model to Var03
+```{r S2v3ETSModel, echo=FALSE, fig.width=8L, fig.height=6L}
+#Var 03
+fit_ets_V03 <- ets(S02v3C)
+autoplot(fit_ets_V03)
+checkresiduals(fit_ets_V03)
+fit_ets_V03 %>% forecast(h=140) %>%
+  autoplot() +
+  ylab("Forecast for Var03")
+
+```
+
+
+#### Applying ARIMA Model to Var02.
+```{r S2v2ArimaModel, echo=FALSE, fig.width=8L, fig.height=6L}
+kpss_fit <-ur.kpss(S02v2C)
+summary(kpss_fit)
+
+
+diff_kpss_fit <- ur.kpss(diff(S02v2C))
+summary(diff_kpss_fit)
+
+ndiffs(S02v2C)
+
+
+fit4 <- auto.arima(diff(diff(S02v2C)),lambda = NULL)
+checkresiduals(fit4)
+
+autoplot(forecast(fit4, h=140))
+
+```
+The test statistic is much bigger than the 1% critical value, indicating that the
+null hypothesis is rejected. That is, the data are not stationary. We can difference
+the data, and apply the test again.After doing the differencing the critical value is
+less than 1% which clearly indicates the data is stationary .                     
+
+#### Arima model for Var 03
+```{r S2v3ArimaModel, echo=FALSE, fig.width=8L, fig.height=6L}
+kpss_fit_V03 <-ur.kpss(S02v3C)
+summary(kpss_fit_V03)
+
+arimafit_var03 <- auto.arima(diff(S02v3C), lambda=NULL)
+checkresiduals(arimafit_var03)
+autoplot(forecast(arimafit_var03, h=140))
+
+```
+The test statistic is much bigger than the 1% critical value, indicating that the null
+hypothesis is rejected. That is, the data are not stationary. We can difference the data,
+and apply the test again.After doing the differencing the critical value is less than 
+1% which clearly indicates the data is stationarynow for implementing the Arima model.               
+
+#### MAPE Calculation:
+
+```{r S2v2v3MAPE, echo=FALSE, fig.width=8L, fig.height=6L}
+print(paste0("Accuracy for Var 02"))
+print(paste0("MAPE for S02 Var02 using Holt's winter model :::   ", MLmetrics::MAPE(fc2$fitted,S02v2C)))
+print(paste0("MAPE for S02 Var02 using ETS model           :::   ",  MLmetrics::MAPE(fit_ets$fitted,S02v2C)))
+print(paste0("MAPE for S02 Var02 using Auto ARIMA model    :::   ",  MLmetrics::MAPE(fit4$fitted,S02v2C)))
+
+print(paste0("Accuracy for Var 03"))
+print(paste0("MAPE for S03 Var03 using Holt's winter model  :::   ", MLmetrics::MAPE(fc3$fitted,S02v3C)))
+print(paste0("MAPE for S03 Var03 using ETS model           :::   ", MLmetrics::MAPE(fit_ets_V03$fitted,S02v3C)))
+print(paste0("MAPE for S03 Var03 using Auto ARIMA model    :::   ", MLmetrics::MAPE(arimafit_var03$fitted,S02v3C)))
+
+```
+
+Looking at the error(MAPE) for various model, the Holt model is best fit model for 
+Var02 variables.And for Var03 ETS model is the best fit.                  
+
+Also looking at the residuals for both models , we can see that both the Holt and
+ETS model  for thier respective variables is having constant variance and normal 
+distrubution and also residuals are uncorrelated with nearly zero mean.The mean of
+the residuals is close to zero and there is no significant correlation in the residuals
+series. Also from portmanteau test (Ljung-Box test) both Holt &  ETS method has the
+least p-value , thus we can reject the NULL hypothesis i.e. residuals are clearly 
+distinguishable from white noise and hence our residuals are free from data information
+which if present should have been used for computing forecasts.And also in case var03 
+the residuals are uncorrelated and nearly zero.               
+
+
 
 ```{r S2Final, include=FALSE}
-S2Final <- data.table(Var02 = rep(NA_real_, 140),
-                      Var03 = rep(NA_real_, 140))
+
+S2Final <- data.table(Var02 = forecast(fc2,h=140)$mean,
+                      Var03 = forecast(fit_ets_V03, h=140)$mean)
 ```
 
 
