--- a/Group1_Project1.Rmd
+++ b/Group1_Project1.Rmd
@@ -148,114 +148,25 @@ summary(S2v2)
 
 Var02 has no missing values and Var03 has 4 missing values.        
 
-#### Exploratory Analysis of Var02 in series S02
+### Series Visualization
 
-```{r S2ExpAnlV2, echo=FALSE}
-
+```{r}
 autoplot(S2v1)
-
-lag.plot(S2v1)
-
-hist(scale(S2v1),br=100,xlim=c(0,100))
-
-boxplot(S2v1)
-
-qqnorm(S2v1)
-qqline(S2v1)
-```
-
-Looking at above plots and comparing with the below assumptions for univariate
-variable.                                  
-
-Fixed Location: If the fixed location assumption holds, then the run sequence 
-plot will be flat and non-drifting.          
-
-Fixed Variation: If the fixed variation assumption holds, then the vertical 
-spread in the run sequence plot will be the approximately the same over the
-entire horizontal axis.                         
-
-Randomness: If the randomness assumption holds, then the lag plot will be 
-structureless and random.                 
-
-Fixed Distribution: If the fixed distribution assumption holds, in particular if 
-the fixed normal distribution holds, then the histogram will be bell-shaped, and
-the normal probability plot will be linear.                              
-
-In Var02 case, the run sequence plot shows the order that the data are presented
-in the file is NOT random and also the variance in the data is eventually not 
-much towards end i.e. it is flat and drift is nearly constant. Lag plot has some
-structure i.e. mostly a  big clusters is  visible which means it is not random.
-Histogram shows the presence of outliers. The histogram is not symmetrical, 
-nor does it looks like a bell-curve and it is right skewed. The normal QQ plot 
-is not a straight line.
-
-#### Exploratory Analysis of Var03 in series S02
-```{r S2ExpAnlV3, echo=FALSE}
-
-# interpreting NA values in our variable,
-S2v2 <- na_interpolation(S2v2)  
-
-summary(S2v2)
-
 autoplot(S2v2)
-
-lag.plot(S2v2)
-
-hist(scale(S2v2),br=100,xlim=c(0,100) )
-
-boxplot(S2v2)
-
-qqnorm(S2v2)
-
-qqline(S2v2)
-
-
 ```
-In Var03 case, histogram shows the data is right skewed, and lag diagram shows a 
-big cluster of variables , which means data is randomly distributed.And we can clearly 
-see that there is only one outlier from our box plot.so we are not going to do anything
-for the outlier as without knowing the background of the data outlier we don't want to 
-tinker with that.              
 
-#### Outlier replacement for var02
-```{r S2outliRep02, echo=FALSE, fig.width=8L, fig.height=6L}
+### Applying Models 
+
+#### Using Holt's method for Var02.                 
+
+```{r S2outliRep02-run, echo=FALSE, include = F}
 
 # Replacing outlier using linear interpolation on a time series
 
 S02v2C <- tsclean(S2v1)
 S02v3C <- S2v2
-
-
-
-autoplot(S02v2C)
-
-hist(scale(S02v2C),br=100,xlim=c(0,100) )
 ```
 
-Aplying tsclean to replace outlier in the var02 using linear interpolation, it is clear
-visible that our run sequence diagram shows a inverse trend and not much of seasonality 
-and it has certain constant drift . Histogram is now not rughtly skewed and is now more 
-following bell shaped curve. As var03 has only one outlier , so we will give it a skip as
-there is not enough data information as to whether this outlier is due to wrong data 
-collection is it due to sudden cyclic trend which occured at that time period.             
-
-#### ACF of Var02 and Var03
-```{r S2ACFPlots, echo=FALSE, fig.width=8L, fig.height=6L}
-
-ggAcf(S02v2C)
-
-ggAcf(S02v3C)
-
-
-```
-
-ACF plots for both var02 & var03 shows that Trend is present with very less or no seasonality.
-And also looking at the plots we can say that the correlation is very weak which means there
-is very less time dependency in data for both variables.              
-
-### Applying Models 
-
-#### Using Holt's method for Var02.                   
 ```{r S2v2HoltModel, echo=FALSE, fig.width=8L, fig.height=6L}
 fc2 <- holt(S02v2C, damped=TRUE, h=140)
 
@@ -264,7 +175,9 @@ autoplot(S02v2C) +
   ggtitle("Forecasts from Holt's method") + xlab("Year") +
   ylab("Holt's Damped Method Var02") +
   guides(colour=guide_legend(title="Forecast"))
+
 checkresiduals(fc2)
+
 autoplot(forecast(fc2))
 
 ```
@@ -1034,6 +947,115 @@ investigate are those at lag 0 (correlation) and lag 1 (cross-correlation). A
 future enhancement may be to consider some form of expectation-maximization or
 staggered fitting algorithm where the value of \(V_{i_k}\) would also depend on
 the value of \(V_{j_{k-1}}\).
+
+## Series 2
+### Exploratory Analysis of Var 02
+
+```{r S2ExpAnlV2, echo=FALSE}
+
+autoplot(S2v1)
+
+lag.plot(S2v1)
+
+hist(scale(S2v1),br=100,xlim=c(0,100))
+
+boxplot(S2v1)
+
+qqnorm(S2v1)
+qqline(S2v1)
+```
+
+Looking at above plots and comparing with the below assumptions for univariate
+variable.                                  
+
+Fixed Location: If the fixed location assumption holds, then the run sequence 
+plot will be flat and non-drifting.          
+
+Fixed Variation: If the fixed variation assumption holds, then the vertical 
+spread in the run sequence plot will be the approximately the same over the
+entire horizontal axis.                         
+
+Randomness: If the randomness assumption holds, then the lag plot will be 
+structureless and random.                 
+
+Fixed Distribution: If the fixed distribution assumption holds, in particular if 
+the fixed normal distribution holds, then the histogram will be bell-shaped, and
+the normal probability plot will be linear.                              
+In Var02 case, the run sequence plot shows the order that the data are presented
+in the file is NOT random and also the variance in the data is eventually not 
+much towards end i.e. it is flat and drift is nearly constant. Lag plot has some
+structure i.e. mostly a  big clusters is  visible which means it is not random.
+Histogram shows the presence of outliers. The histogram is not symmetrical, 
+nor does it looks like a bell-curve and it is right skewed. The normal QQ plot 
+is not a straight line.
+
+### Exploratory Analysis of Var 03 
+
+```{r S2ExpAnlV3, echo=FALSE}
+
+# interpreting NA values in our variable,
+S2v2 <- na_interpolation(S2v2)  
+
+summary(S2v2)
+
+autoplot(S2v2)
+
+lag.plot(S2v2)
+
+hist(scale(S2v2),br=100,xlim=c(0,100) )
+
+boxplot(S2v2)
+
+qqnorm(S2v2)
+
+qqline(S2v2)
+
+
+```
+
+In Var03 case, histogram shows the data is right skewed, and lag diagram shows a 
+big cluster of variables , which means data is randomly distributed.And we can clearly 
+see that there is only one outlier from our box plot.so we are not going to do anything
+for the outlier as without knowing the background of the data outlier we don't want to 
+tinker with that. 
+
+### Outlier replacement for var02
+
+```{r S2outliRep02, echo=FALSE, fig.width=8L, fig.height=6L}
+
+# Replacing outlier using linear interpolation on a time series
+
+S02v2C <- tsclean(S2v1)
+S02v3C <- S2v2
+
+
+
+autoplot(S02v2C)
+
+hist(scale(S02v2C),br=100,xlim=c(0,100) )
+```
+
+Aplying tsclean to replace outlier in the var02 using linear interpolation, it is clear
+visible that our run sequence diagram shows a inverse trend and not much of seasonality 
+and it has certain constant drift . Histogram is now not rughtly skewed and is now more 
+following bell shaped curve. As var03 has only one outlier , so we will give it a skip as
+there is not enough data information as to whether this outlier is due to wrong data 
+collection is it due to sudden cyclic trend which occured at that time period.
+
+### ACF of Var02 and Var03
+
+```{r S2ACFPlots, echo=FALSE, fig.width=8L, fig.height=6L}
+
+ggAcf(S02v2C)
+
+ggAcf(S02v3C)
+
+
+```
+
+ACF plots for both var02 & var03 shows that Trend is present with very less or no seasonality.
+And also looking at the plots we can say that the correlation is very weak which means there
+is very less time dependency in data for both variables.   
 
 ## Series 3
 ### Missing Value Imputation
